<resources>
    <string name="app_name">ALC 4 Phase 1</string>
    <string name="title_welcome_to_alc_4_0">Welcome to ALC 4.0</string>
    <string name="button_label_about_alc">About ALC</string>
    <string name="button_label_my_profile">My Profile</string>
    <string name="tv_label_track">Track:</string>
    <string name="tv_label_country">Country:</string>
    <string name="tv_label_email">Email:</string>
    <string name="tv_label_phone_number">Phone Number:</string>
</resources>
